--- a/templates/pyproject.toml.template
+++ b/templates/pyproject.toml.template
@@ -27,10 +27,11 @@ packages = [{include = "@package@"}]
 
 [tool.poetry.dependencies]
 python = "^@pythonMajorMinorVersion@"
-pythoneda-runtime-secrets-events = "^@pythonedaRuntimeSecretsEvents@"
-pythoneda-runtime-secrets-events-infrastructure = "^@pythonedaRuntimeSecretsEventsInfrastructure@"
+pythoneda-runtime-secrets = "^@pythonedaRuntimeSecrets@"
 pythoneda-shared-pythonlang-domain = "^@pythonedaSharedPythonlangDomain@"
 pythoneda-shared-pythonlang-infrastructure = "^@pythonedaSharedPythonlangInfrastructure@"
+pythoneda-shared-runtime-secrets-events = "^@pythonedaSharedRuntimeSecretsEvents@"
+pythoneda-shared-runtime-secrets-events-infrastructure = "^@pythonedaSharedRuntimeSecretsEventsInfrastructure@"
 
 [build-system]
 requires = ["poetry-core"]
